--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "php": ">=5.3.2",
         "symfony/framework-bundle": "2.1.*",
         "symfony/security-bundle": "2.1.*",
-        "symfony/twig-bundle": "2.1.*"
+        "symfony/twig-bundle": "2.1.*",
+        "bitgandtter/google-api-php-client": "dev-master"
     },
 
     "autoload": {
