--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "symfony/framework-bundle": "2.1.*",
         "symfony/security-bundle": "2.1.*",
         "symfony/twig-bundle": "2.1.*",
-        "sorien/google-api": "dev-master"
+        "bitgandtter/google-api": "dev-master"
     },
 
     "autoload": {
